--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "ext-json": "*",
         "phpunit/phpunit": "~6.5",
         "symfony/filesystem": "^2.8",
-        "symfony/property-access": "^2.7"
+        "symfony/property-access": "^2.7",
+        "webmozart/assert": "^1.4"
     }
 }
