--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.1",
         "ext-json": "*",
+        "ext-mbstring": "*",
         "phpunit/phpunit": "~6.5",
         "symfony/filesystem": "^2.8",
         "symfony/property-access": "^2.7",
