--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     "require": {
         "php": "^7.1",
         "ext-json": "*",
+        "ext-dom": "*",
+        "ext-simplexml": "*",
         "ext-mbstring": "*",
         "phpunit/phpunit": "~6.5",
         "symfony/filesystem": "~2.8|~3.0|~4.0",
