--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-simplexml": "*",
-        "symfony/filesystem": "~2.8|~3.0|~4.0",
-        "symfony/property-access": "~2.8|~3.0|~4.0",
+        "symfony/filesystem": "~2.8|~3.0|~4.0|~5.0",
+        "symfony/property-access": "~2.8|~3.0|~4.0|~5.0",
         "webmozart/assert": "~1.2"
     },
     "require-dev": {
-        "doctrine/coding-standard": "~6.0",
+        "doctrine/coding-standard": "~6.0|~8.0",
         "phpunit/phpunit": "^9.6"
     }
 }
