--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
         "psr-4": { "Tests\\": ["tests/unit"] }
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=8.2",
         "ext-dom": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-simplexml": "*",
-        "symfony/filesystem": "~2.8|~3.0|~4.0|~5.0",
-        "symfony/property-access": "~2.8|~3.0|~4.0|~5.0",
+        "symfony/filesystem": "~2.8|~3.0|~4.0|~5.0|^7.1",
+        "symfony/property-access": "~2.8|~3.0|~4.0|~5.0|^7.1",
         "webmozart/assert": "~1.2"
     },
     "require-dev": {
